--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
+# Created by https://www.toptal.com/developers/gitignore/api/java,windows,maven,eclipse
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,windows,maven,eclipse
 
 ### Eclipse ###
-pom.properties
 .metadata
 bin/
 tmp/
@@ -11,7 +10,6 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.settings/
 .loadpath
 .recommenders
 
@@ -70,9 +68,10 @@ local.properties
 
 ### Java ###
 # Compiled class file
+*.class
 
-
-
+# Log file
+*.log
 
 # BlueJ files
 *.ctxt
@@ -81,7 +80,7 @@ local.properties
 .mtj.tmp/
 
 # Package Files #
-
+*.jar
 *.war
 *.nar
 *.ear
@@ -93,4 +92,50 @@ local.properties
 hs_err_pid*
 replay_pid*
 
-# End of https://www.toptal.com/developers/gitignore/api/java,eclipse
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+pom.properties
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
+
+# Eclipse m2e generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/java,windows,maven,eclipse
