--- a/pom.xml
+++ b/pom.xml
@@ -121,13 +121,13 @@
 		<!-- JDBC 설정하기 -->
 		<!-- https://mvnrepository.com/artifact/oracle/oracle-jdbc -->
 
-     <dependency>
-       <groupId>oracle.jdbc</groupId>
-       <artifactId>OracleDriver</artifactId>
-       <version>12.1.0.2.0</version>
-       <scope>system</scope>
-       <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc10.jar</systemPath>
-      </dependency>
+		<!-- MySQL -->
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.13</version> <!-- 8.0.13 -->
+		</dependency>
 
 		
 		<!-- MyBatis 3.5.6 -->
